# ucdp_border_crossing_ml

./: .gitignore  README.md  app.py  gedevents-2026-01-17.csv  model.pkl  package-lock.json  pyproject.toml  ucdp_border_crossing_ml.ipynb
